--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
       </div>
     </div>
     <script src="./js/data.js"></script>
-    <!-- <script src="./js/myscript.js"></script> -->
-    <script src="./js/train.js"></script>
+    <script src="./js/myscript.js"></script>
   </body>
 </html>
